# CPR_channel_placement_reporting

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  .projections.json  GAdsDataFetcher.gc  Makefile  README.md  credentials_auth.py  docker-compose.yml  gAdsDataFetcher.gc  gAds_script.gc  gAds_script_addition_for_mcc.gc  install.sh  requirements.txt  ruff.toml  spreadsheet_script.gc  update.sh
backend/: Dockerfile  app.yaml  cloud_api.py  cpr_services.py  credentials.py  firebase_server.py  gads_api.py  gads_make_client.py  pyproject.toml  requirements.in  requirements.txt  server.py
backend/ads_placement_guardian/: __init__.py  server.py
backend/template/: authdone.html
docs/: run-cpr-locally.md
frontend/: .gitignore  Dockerfile  angular.json  eslint.config.mjs  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss  theme.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  newtask.component.html  newtask.component.scss  newtask.component.ts  releasenotes.component.html  releasenotes.component.ts  settings.component.html  settings.component.scss  settings.component.ts  tasks.component.html  tasks.component.scss  tasks.component.ts
gcp/: app.yaml  install.sh  requirements.txt  settings.ini  update.sh
gcp/cloud_functions/create_task_schedule/: main.py
gcp/cloud_functions/delete_task_schedule/: main.py
scheduler/: Dockerfile  scheduler.sh
tests/e2e/: assert.sh  test_accounts.sh  test_allowlisting.sh  test_config.sh  test_preview.sh  test_task.sh
(+15 files in other folders)
